k8s-eks/userservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userservice-deployment
  namespace: pythonapins
  labels:
    app: userservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userservice
  template:
    metadata:
      labels:
        app: userservice
    spec:
      containers:
      - name: pythonapi
        image: pythonapi:latest
        ports:
        - containerPort: 8000
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
