k8s-eks/userservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: userservice-service
  namespace: pythonapins
spec:
  selector:
    app: userservice
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
