k8s-eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: pythonapins
  name: userservice-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /
  spec:
    ingressClassName: alb
    rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: userservice-service
              port:
                number: 8000
